# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.178 2005/10/24 12:11:34 agaffney Exp $

*GLI-gtkfe-0.3 (17 Oct 2005)

  24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  add Verbose option to ClientConfig

  22 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  add tab for tailing the log file

*GLI-gtkfe-0.2 (17 Oct 2005)

  7 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  snapshot URI entry is disabled when entering the screen if not snapshot

  5 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  fix all calls to get_active_text() in URIBrowser.py

  22 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  move 'Recommended layout' button up to top
  add 'Clear partitions' button

  20 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  add 'network is already setup and running' checkbox on ClientConfig screen
  remove debugging print statements from PartProperties.py

  14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  browse button is disabled along with URI entry field

  13 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  FileBrowser is now URIBrowser
  change URIBrowser to take gtk.Entry object as an argument
  add URIBrowser to PortageTree.py

  5 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  file list is refreshed on "Refresh" or set host from mirror list
  ftp support in URI browser
  hide TreeView column header

  4 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  add FileBrowser.py and modify Stage.py to use it.
  add mirror list browsing

  3 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
  sub-progress bar
  change 'etc_files' to 'self.etc_files' in RcDotConf
  set subprogress bar text to "Working..." after each pulse
  change pulse rate to 0.03

  1 Sep 2005; Preston Cody <codeman@gentoo.org>
  hack to fix gtkfe to write rc.conf in the etc_files structure.
  do the same fix for make.conf

  21 Aug 2005; Andrew Gaffney <agaffney@gentoo.org>