@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.178 2005/10/24 12:11:34 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.179 2005/10/26 03:13:26 agaffney Exp $
 
 *GLI-gtkfe-0.3 (17 Oct 2005)
+
+  25 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  disable Dynamic option if systempkgs.txt not present
 
   24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   add Verbose option to ClientConfig
